Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132377

Broken country flags emoji rendering in KDE

XMLWordPrintable

    • Linux/Wayland
    • 2e1db6541 (dev), b154af082 (dev), e958f05ae (6.9), 87330d4bd (6.9)

      With the new emoji segmenter support in Qt 6.9, there is now broken rendering of country flag emojis in KDE. 

      This is reproducible with Plasma systemsettings, when you go to Keyboard → Add Layout, the dialog that appears look like:

      While before or with QT_DISABLE_EMOJI_SEGMENTER=1 it looks like:

      The keyboard KCM is using https://invent.kde.org/frameworks/kguiaddons/-/blob/master/src/util/kcountryflagemojiiconengine.cpp
       

        1. broken-settings.png
          204 kB
          Jan Grulich
        2. font-match-debug-container.txt
          9 kB
          Jan Grulich
        3. font-match-debug-host.txt
          22 kB
          Jan Grulich
        4. image-2025-02-18-13-59-20-982.png
          16 kB
          Michel de Boer
        5. working-settings.png
          187 kB
          Jan Grulich
        For Gerrit Dashboard: QTBUG-132377
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            jgrulich Jan Grulich
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes